# autotools-skeleton

./: .gitignore  Makefile.am  README.md  configure.ac
include/: hello.h
src/: hello.cpp  libhello.cpp
src/tests/: testhello.cpp
